# caravel-pac

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  device.x
.github/workflows/: ci.yml  release-plz.yml
caravel-pac-macros/: CHANGELOG.md  Cargo.toml  README.md
caravel-pac-macros/src/: lib.rs
src/: lib.rs
