[workspace]
members = [".", "caravel-pac-macros"]

[package]
name = "caravel-pac"
version = "1.0.6"
description = "Peripheral Access Crate for the Caravel management SoC."
keywords = ["riscv", "caravel", "caravan", "chipignite", "chipfoundry"]
repository = "https://github.com/adamgreg/caravel-pac"
authors = ["Adam Gregory <adam@aguilaengineering.com>"]
license = "MIT"
edition = "2024"

[dependencies]
bitfield-struct = "^0.12.1"
riscv = "^0.15.0"
vexriscv = "^0.0.3"
volatile-register = "^0.2.2"

caravel-pac-macros = { path = "caravel-pac-macros", version = "1.0.3" }

[features]
mock-registers = ["caravel-pac-macros/mock-registers"] # Use for testing to avoid out-of-bounds accesses
mock-user-registers = ["caravel-pac-macros/mock-user-registers"] # Like mock-registers, but only affects user area (Wishbone bus)
