[package]
name = "caravel-pac-macros"
version = "1.0.3"
description = "Proc macro crate to support the caravel-pac crate."
keywords = ["riscv", "caravel", "caravan", "chipignite", "chipfoundry"]
repository = "https://github.com/adamgreg/caravel-pac"
authors = ["Adam Gregory <adam@aguilaengineering.com>"]
license = "MIT"
edition = "2024"

[lib]
proc-macro = true

[dependencies]

[features]
mock-registers = [] # Use for testing to avoid out-of-bounds accesses
mock-user-registers = [] # Like mock-registers, but only affects user area (Wishbone bus)
