[package]
name = "caravel-pac-macros"
version = "2.0.0"
description = "Proc macro crate to support the caravel-pac crate."
keywords = ["riscv", "caravel", "caravan", "chipignite", "chipfoundry"]
repository = "https://github.com/adamgreg/caravel-pac"
authors = ["Adam Gregory <adam@aguilaengineering.com>"]
license = "MIT"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
quote = "^1.0.40"
proc-macro2 = "1.0.103"
syn = { version = "2.0.110", features = ["full"] }

[features]
mock-registers = [] # Use for testing to avoid out-of-bounds accesses
mock-user-registers = [] # Like mock-registers, but only affects user area (Wishbone bus)
